Noissue fix some ide warnings (#876)
* noissue: fix some ide warnings